Fix spacing in the todo list

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,6 +80,7 @@ body {
 }
 
 .todo_list_sub_title {
+  padding: 2em;
 	margin: 0 0 3em 0;
 	text-align: center;
 	font-size: 0.9em;
